WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
292475
HTMLElement.h doesn't need to include ColorTypes.h
https://bugs.webkit.org/show_bug.cgi?id=292475
Summary
HTMLElement.h doesn't need to include ColorTypes.h
Ryosuke Niwa
Reported
2025-05-02 19:16:04 PDT
We just need to forward declare a few types & typedef.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-05-02 19:21:29 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/44884
EWS
Comment 2
2025-05-03 00:52:35 PDT
Committed
294473@main
(caaaddf0bcf4): <
https://commits.webkit.org/294473@main
> Reviewed commits have been landed. Closing PR #44884 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-05-03 00:54:53 PDT
<
rdar://problem/150579220
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug