HTMLElement.h doesn't need to include ColorTypes.h https://bugs.webkit.org/show_bug.cgi?id=292475

Reviewed by Anne van Kesteren.

Forward declare a few types to avoid including ColorTypes.h in HTMLElement.h

* Source/WebCore/html/HTMLElement.h:

Canonical link: https://commits.webkit.org/294473@main